--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="images/nightowldamon.png" alt="nightowldamon" class="logo-img">
         </div>
         <div class="nav-links">
-            <a href="#" class="active">Home</a>
+            <a href="/index.html" class="active">Home</a>
             <a href="#">About</a>
             <a href="#">Projects</a>
             <a href="#">Articles</a>
