--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="images/nightowldamon.png" alt="nightowldamon" class="logo-img">
+            <a href="https://x.com/NightOwlDamon"><img src="images/nightowldamon.png" alt="nightowldamon" class="logo-img"></a>
         </div>
         <div class="nav-links">
             <a href="/" class="active">Home</a>
