--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="/" class="active">Home</a>
             <a href="#">About</a>
             <a href="#">Projects</a>
-            <a href="#">Articles</a>
+            <a href="#">Articles</a> //This line is commented out 
         </div>
         <div class="theme-toggle">
             <button id="theme-button">
@@ -41,7 +41,7 @@
     <main class="hero">
         <div class="hero-content">
             <img src="images/grok-robot.png" alt="Hero Image" class="hero-img">
-            <h1>We Are AI.</h1>
+            <h1>We, AI</h1>
         </div>
     </main>
 
