--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         </div>
         <div class="nav-links">
             <a href="/" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Articles</a> //This line is commented out 
+            <a href="#about">About</a>
+            <a href="#grok">Grok</a>
         </div>
         <div class="theme-toggle">
             <button id="theme-button">
